--- a/pages/seasonal_manga.html
+++ b/pages/seasonal_manga.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../styles/seasonal_manga.css">
 </head>
+
 <body>
     <header>
         <div class="website_name">
@@ -85,26 +87,26 @@
                     <tr>
                         <td class="rank">1</td>
                         <td class="title">
-                            <img src="../images/sousuo.png" alt="Sousuo">
+                            <img src="../images/haikyuu.png" alt="Haikyuu!!">
                             <div>
-                                <span> Sousou no Frieren </span>
-                                <span class="subtext">TV (28 eps)<br> Sep 2023 - Mar 2024</span>
+                                <span>haikyuu!!</span>
+                                <span class="subtext">Manga (45 vols)<br> Feb 2012 - Jul 2020</span>
                             </div>
                         </td>
-                        <td class="score">9.16</td>
+                        <td class="score">4.8</td>
                         <td class="user-score">N/A</td>
                         <td><button>Add to My List</button></td>
                     </tr>
                     <tr>
                         <td class="rank">2</td>
                         <td class="title">
-                            <img src="../images/onepiecfanletter.png" alt="One Piece Fan Letter">
+                            <img src="../images/onepiece_manga.png" alt="One Piece">
                             <div>
-                                <span> One Piece Fan Letter </span>
-                                <span class="subtext">TV Special (1 ep)<br> Oct 2024</span>
+                                <span> One Piece</span>
+                                <span class="subtext">Manga (?)<br> Jul 1997 - Ongoing</span>
                             </div>
                         </td>
-                        <td class="score">9.09</td>
+                        <td class="score">4.9</td>
                         <td class="user-score">N/A</td>
                         <td><button>Add to My List</button></td>
                     </tr>
@@ -217,4 +219,5 @@
         </div>
     </main>
 </body>
+
 </html>
