--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li class="dropdown">
                     <a href="#">Manga</a>
                     <div class="dropdown-content">
-                        <a href="#">Top Manga</a>
+                        <a href="pages/top-manga.html">Top Manga</a>
                         <a href="pages/seasonal_manga.html">Seasonal Manga</a>
                         <a href="#">All Time Hits</a>
                         <a href="#">Recommendations</a>
@@ -200,10 +200,10 @@
           <div class="footer-social">
             <p>Follow Us</p>
             <div class="social-icons">
-              <a href="#"><img src="images/facebook.png" width=40px alt="Facebook"></a>
-              <a href="#"><img src="images/twitter.png" width=40px alt="Twitter"></a>
-              <a href="#"><img src="images/instagram.png" width=40px alt="Instagram"></a>
-              <a href="#"><img src="images/discord.png" width=40px alt="Discord"></a>
+              <a href="https://www.facebook.com/profile.php?id=61565914986740"><img src="images/facebook.png" width=40px alt="Facebook"></a>
+              <a href="https://x.com/KharwarShash"><img src="images/twitter.png" width=40px alt="Twitter"></a>
+              <a href="https://www.instagram.com/shashk__k/"><img src="images/instagram.png" width=40px alt="Instagram"></a>
+              <a href="discordapp.com/users/914001554477056020"><img src="images/discord.png" width=40px alt="Discord"></a>
             </div>
           </div>
           <div class="footer-links">
