--- a/pages/top-anime.html
+++ b/pages/top-anime.html
@@ -255,7 +255,7 @@
               <a href="https://www.facebook.com/profile.php?id=61565914986740"><img src="../images/facebook.png" width=40px alt="Facebook"></a>
               <a href="https://x.com/KharwarShash"><img src="../images/twitter.png" width=40px alt="Twitter"></a>
               <a href="https://www.instagram.com/shashk__k/"><img src="../images/instagram.png" width=40px alt="Instagram"></a>
-              <a href="discordapp.com/users/914001554477056020"><img src="../images/discord.png" width=40px alt="Discord"></a>
+              <a href="https://discordapp.com/users/914001554477056020"><img src="../images/discord.png" width=40px alt="Discord"></a>
             </div>
           </div>
           <div class="footer-links">
