--- a/pages/seasonal_manga.html
+++ b/pages/seasonal_manga.html
@@ -89,7 +89,7 @@
                         <td class="title">
                             <img src="../images/haikyuu.png" alt="Haikyuu!!">
                             <div>
-                                <span>haikyuu!!</span>
+                                <span> haikyuu!! </span>
                                 <span class="subtext">Manga (45 vols)<br> Feb 2012 - Jul 2020</span>
                             </div>
                         </td>
@@ -102,7 +102,7 @@
                         <td class="title">
                             <img src="../images/onepiece_manga.png" alt="One Piece">
                             <div>
-                                <span> One Piece</span>
+                                <span> One Piece </span>
                                 <span class="subtext">Manga (?)<br> Jul 1997 - Ongoing</span>
                             </div>
                         </td>
@@ -113,85 +113,85 @@
                     <tr>
                         <td class="rank">3</td>
                         <td class="title">
-                            <img src="../images/fullmetal.png" alt="Fullmetal Alchemist: Brotherhood">
+                            <img src="../images/kaiju.png" alt="Kaiju No.8">
                             <div>
-                                <span> Fullmetal Alchemist: Brotherhood </span>
-                                <span class="subtext">TV (64 eps)<br> Apr 2009 - Jul 2010</span>
+                                <span> Kaiju No.8 </span>
+                                <span class="subtext">Manga (14vols) <br> Jul 2020 - Ongoing</span>
                             </div>
                         </td>
-                        <td class="score">9.09</td>
+                        <td class="score">4.8</td>
                         <td class="user-score">N/A</td>
                         <td><button>Add to My List</button></td>
                     </tr>
                     <tr>
                         <td class="rank">4</td>
                         <td class="title">
-                            <img src="../images/steinsgate.png" alt="Steins;Gate">
+                            <img src="../images/blackclover.png" alt="Blackclover">
                             <div>
-                                <span> Steins;Gate </span>
-                                <span class="subtext">TV (24 eps)<br> Apr 2011 - Sep 2011</span>
+                                <span> Black Clover </span>
+                                <span class="subtext">Manga (?)<br> Oct 2017 - Ongoing </span>
                             </div>
                         </td>
-                        <td class="score">9.07</td>
+                        <td class="score">4.7</td>
                         <td class="user-score">N/A</td>
                         <td><button>Add to My List</button></td>
                     </tr>
                     <tr>
                         <td class="rank">5</td>
                         <td class="title">
-                            <img src="../images/shingeki.png" alt="Shingeki no Kyojin Season 3 Part 2">
+                            <img src="../images/versatilemage.png" alt="Versatile Mage">
                             <div>
-                                <span> Shingeki no Kyojin Season 3 Part 2 </span>
-                                <span class="subtext">TV (10 eps)<br> Apr 2019 - Jul 2019</span>
+                                <span> SVersatile Mage </span>
+                                <span class="subtext">Manga (2 books)<br> 2016 - Aug 2023 </span>
                             </div>
                         </td>
-                        <td class="score">9.05</td>
+                        <td class="score">4.7</td>
                         <td class="user-score">N/A</td>
                         <td><button>Add to My List</button></td>
                     </tr>
                     <tr>
                         <td class="rank">6</td>
                         <td class="title">
-                            <img src="../images/gintama.png" alt="Gintama°">
+                            <img src="../images/beginningafterend.png" alt="Beginning After End">
                             <div>
-                                <span> Gintama° </span>
-                                <span class="subtext">TV (51 eps)<br> Apr 2011 - Mar 2012</span>
+                                <span> Beginning After End </span>
+                                <span class="subtext"><br> Jan 2017 - Ongoing</span>
                             </div>
                         </td>
-                        <td class="score">9.05</td>
+                        <td class="score">4.4</td>
                         <td class="user-score">N/A</td>
                         <td><button>Add to My List</button></td>
                     </tr>
                     <tr>
                         <td class="rank">7</td>
                         <td class="title">
-                            <img src="../images/gintamathefinal.png" alt="Gintama: The Final">
+                            <img src="../images/kimetsunoyaiba.png" alt="Kimetsu No Yaiba">
                             <div>
-                                <span> Gintama: The Final </span>
-                                <span class="subtext">Movie (1 eps)<br> Jan 2021 - Jan 2021</span>
+                                <span> Kimetsu No Yaiba </span>
+                                <span class="subtext">Manga (23 vols)<br> Apr 2019 - Jun 2020</span>
                             </div>
                         </td>
-                        <td class="score">9.04</td>
+                        <td class="score">4.6</td>
                         <td class="user-score">N/A</td>
                         <td><button>Add to My List</button></td>
                     </tr>
                     <tr>
                         <td class="rank">8</td>
                         <td class="title">
-                            <img src="../images/gintama'.png" alt="Gintama'">
+                            <img src="../images/bokunohero.png" alt="Boku No Hero'">
                             <div>
-                                <span> Gintama' </span>
-                                <span class="subtext">TV (51 eps)<br> Apr 2011 - Mar 2012</span>
+                                <span> Boku No Hero </span>
+                                <span class="subtext">Manga (41 vols)<br> Jul 2016 - Aug 2024</span>
                             </div>
                         </td>
-                        <td class="score">9.03</td>
+                        <td class="score">4.7</td>
                         <td class="user-score">N/A</td>
                         <td><button>Add to My List</button></td>
                     </tr>
                     <tr>
                         <td class="rank">9</td>
                         <td class="title">
-                            <img src="../images/hunterhunter.png" alt="Hunter x Hunter (2011)">
+                            <img src="../images/towerofgod.png" alt="Tower Of God">
                             <div>
                                 <span> Hunter x Hunter (2011) </span>
                                 <span class="subtext">TV (148 eps)<br> Oct 2011 - Sep 2014</span>
