--- a/pages/seasonal_manga.html
+++ b/pages/seasonal_manga.html
@@ -141,7 +141,7 @@
                         <td class="title">
                             <img src="../images/versatilemage.png" alt="Versatile Mage">
                             <div>
-                                <span> SVersatile Mage </span>
+                                <span> Sversatile Mage </span>
                                 <span class="subtext">Manga (2 books)<br> 2016 - Aug 2023 </span>
                             </div>
                         </td>
