--- a/pages/seasonal_manga.html
+++ b/pages/seasonal_manga.html
@@ -191,7 +191,7 @@
                     <tr>
                         <td class="rank">9</td>
                         <td class="title">
-                            <img src="../images/towerofgod.png" alt="Tower Of God">
+                            <img src="../images/towerofgod.png" alt="Tower Of God   ">
                             <div>
                                 <span> Hunter x Hunter (2011) </span>
                                 <span class="subtext">TV (148 eps)<br> Oct 2011 - Sep 2014</span>
@@ -218,6 +218,66 @@
             </table>
         </div>
     </main>
+    <footer>
+        <div class="footer-content">
+          <div class="footer-sections">
+            <div class="footer-section">
+              <h3>Top Anime</h3>
+              <ul>
+                <li>1. Sousou no Frieren</li>
+                <li>2. One Piece Fan Letter</li>
+                <li>3. Fullmetal Alchemist: Brotherhood</li>
+                <li>4. Steins;Gate</li>
+                <li>5. Shingeki no Kyojin Season 3 Part 2</li>
+              </ul>
+            </div>
+            <div class="footer-section">
+              <h3>Top Airing Anime</h3>
+              <ul>
+                <li>1. Bleach: Sennen Kessen-hen</li>
+                <li>2. Re:Zero kara Hajimeru Isekai Seikatsu</li>
+                <li>3. One Piece</li>
+                <li>4. Natsume Yuujinchou Shichi</li>
+                <li>5. Dandadan</li>
+              </ul>
+            </div>
+            <div class="footer-section">
+              <h3>Most Popular Characters</h3>
+              <ul>
+                <li>1. Lamperouge, Lelouch</li>
+                <li>2. Levi</li>
+                <li>3. Monkey D., Luffy</li>
+                <li>4. Lawliet, L</li>
+                <li>5. Roronoa, Zoro</li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-social">
+            <p>Follow Us</p>
+            <div class="social-icons">
+              <a href="#">Facebook</a>
+              <a href="#">Twitter</a>
+              <a href="#">Instagram</a>
+              <a href="#">Discord</a>
+            </div>
+          </div>
+          <div class="footer-links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Press Room</a>
+            <a href="#">Support</a>
+            <a href="#">Advertising</a>
+            <a href="#">FAQ</a>
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+            <a href="#">Cookie</a>
+            <a href="#">Notice at Collection</a>
+            <a href="#">Sitemap</a>
+            <a href="#">Login</a>
+            <a href="#">Sign Up</a>
+          </div>
+        </div>
+      </footer>
 </body>
 
 </html>
