--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Footer Layout</title>
-  <link rel="stylesheet" href="temporary.css">
+  <link rel="stylesheet" href="footer.css">
 </head>
 <body>
   <footer>
@@ -40,11 +40,6 @@
             <li>5. Roronoa, Zoro</li>
           </ul>
         </div>
-      </div>
-      <div class="footer-signup">
-        <p><strong>It’s time to ditch the text file.</strong> Keep track of your anime easily by creating your own list.</p>
-        <button class="signup-btn">Sign Up</button>
-        <button class="login-btn">Login</button>
       </div>
       <div class="footer-social">
         <p>Follow Us</p>
