--- a/pages/top-manga.html
+++ b/pages/top-manga.html
@@ -70,7 +70,7 @@
         </nav>
     </header>
     <div class="container">
-        <h2>Top Anime Series</h2>
+        <h2>Top Mangas</h2>
         <table>
             <thead>
                 <tr>
