--- a/pages/top-manga.html
+++ b/pages/top-manga.html
@@ -31,7 +31,7 @@
                 <li class="dropdown">
                     <a href="#">Manga</a>
                     <div class="dropdown-content">
-                        <a href="../pages/top-anime.html">Top Manga</a>
+                        <a href="../pages/top-manga.html">Top Manga</a>
                         <a href="../pages/seasonal_manga.html">Seasonal Manga</a>
                         <a href="#">All Time Hits</a>
                         <a href="#">Recommendations</a>
