--- a/pages/seasonal_manga.html
+++ b/pages/seasonal_manga.html
@@ -20,6 +20,7 @@
         </div>
         <nav class="navbar">
             <ul class="nav-links">
+                <li><a href="../index.html">Home</a></li>
                 <li class="dropdown">
                     <a href="#">Anime</a>
                     <div class="dropdown-content">
