--- a/pages/seasonal_manga.html
+++ b/pages/seasonal_manga.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Seasonal Manga</title>
     <link rel="stylesheet" href="../styles/seasonal_manga.css">
 </head>
 
@@ -256,11 +256,11 @@
           <div class="footer-social">
             <p>Follow Us</p>
             <div class="social-icons">
-              <a href="#">Facebook</a>
-              <a href="#">Twitter</a>
-              <a href="#">Instagram</a>
-              <a href="#">Discord</a>
-            </div>
+                <a href="https://www.facebook.com/profile.php?id=61565914986740"target="_blank"><img src="../images/facebook.png" width=40px alt="Facebook"></a>
+                <a href="https://x.com/KharwarShash"target="_blank"><img src="../images/twitter.png" width=40px alt="Twitter"></a>
+                <a href="https://www.instagram.com/shashk__k/"target="_blank"><img src="../images/instagram.png" width=40px alt="Instagram"></a>
+                <a href="https://discordapp.com/users/914001554477056020"target="_blank"><img src="../images/discord.png" width=40px alt="Discord"></a>
+              </div>
           </div>
           <div class="footer-links">
             <a href="#">Home</a>
