--- a/test.html
+++ b/test.html
@@ -72,7 +72,7 @@
         <main style="background-color: #000000;">
             <section class="anime-info">
                 <div class="anime-poster">
-                    <img src="https://via.placeholder.com/150" alt="Anime Poster">
+                    <img src="images/dandadan.png" alt="Anime Poster">
                     <button>Watch Episodes</button>
                     <button>Add to Favorites</button>
                 </div>
@@ -82,7 +82,15 @@
                     <button>Add to My List</button>
                     <div class="synopsis">
                         <h3>Synopsis</h3>
-                        <p>After being aggressively rejected, Momo Ayase finds herself sulking when she stumbles across a boy being bullied...</p>
+                        <p>After being aggressively rejected, Momo Ayase finds herself sulking when she stumbles across a boy being bullied. Saved by her rash kindness, the alien-obsessed boy attempts to speak to her about extraterrestrial interests he believes they share. Rejecting his claims, Ayase proclaimed that she instead is a believer in ghosts, starting an argument between the two over which is real.
+
+                            In a bet to determine who is correct, the two decide to separately visit locations associated with both the extraterrestrial and the supernatural—Ayase visiting the former and the boy visiting the latter. When the two reach their respective places, it turns out that neither was wrong and that both aliens and ghosts do exist.
+                            
+                            This marks the beginning of Ayase and the boy's adventure, as they attempt to fix the surreal, supernatural, and extraterrestrial elements around them to return to a normal life.
+                            
+                            [Written by MAL Rewrite]</p>
+                        <h3>Background</h3>
+                        <p>Dandadan aired on MBS and TBS' Super Animeism Turbo block.</p>
                     </div>
                 </div>
             </section>
@@ -103,7 +111,9 @@
 
             <section class="related-entries">
                 <h3>Related Entries</h3>
-                <p><a href="#">Adaptation (Manga)</a>: Dandadan</p>
+                <img src="images/dandadanrel.png"></img>
+                <br>
+                <a style="color: white;">Adaptation (Manga)</a><p style="color: white;">: Dandadan</p>
             </section>
 
             <section class="characters">
@@ -111,14 +121,16 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="https://via.placeholder.com/50" alt="Character Image">
+                            <img src="images/momoayase.png" alt="Character Image">
                             <span>Momo Ayase</span>
                             <small>Supporting</small>
+                            <span>->Voiced by- Shion Wakayama</span>
                         </td>
                         <td>
-                            <img src="https://via.placeholder.com/50" alt="Voice Actor Image">
-                            <span>Hanazawa, Kana</span>
+                            <img src="images/kentakura.png" alt="Voice Actor Image">
+                            <span>Takakura, Ken</span>
                             <small>Japanese</small>
+                            <span>->Voiced by- Natsuki Hanae</span>
                         </td>
                     </tr>
                     <tr>
