--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="https://example3.com" target="_blank">
+              <a href="/pages/uzumaki.html" target="_blank">
                 <img src="images/Uzumaki.png" alt="Anime 3">
                 <div class="title">Uzumaki</div>
               </a>
