--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="https://example2.com" target="_blank">
+              <a href="pages/Re Zero.html" target="_blank">
                 <img src="images/Rezero.png" alt="Anime 2">
                 <div class="title">Re:Zero 3rd Season</div>
               </a>
@@ -98,7 +98,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="https://example4.com" target="_blank">
+              <a href="pages/bluelock.html" target="_blank">
                 <img src="images/bluelock.png" alt="Anime 4">
                 <div class="title">Blue Lock vs. U-20 Japan</div>
               </a>
