--- a/pages/dandadan.html
+++ b/pages/dandadan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Page</title>
-    <link rel="stylesheet" href="../styles/Dandadan.css">
+    <link rel="stylesheet" href="../styles/animes.css">
 </head>
 <body>
     <header>
