--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
               </a>
             </div>
             <div class="card">
-              <a href="https://example5.com" target="_blank">
+              <a href="pages/bleach.html" target="_blank">
                 <img src="images/bleach.png" alt="Anime 5">
                 <div class="title">Bleach: Sennen Kessen-hen...</div>
               </a>
             </div>
             <div class="card">
-              <a href="https://example6.com" target="_blank">
+              <a href="pages/dbdaima.html" target="_blank">
                 <img src="images/dbdaima.png" alt="Anime 5">
                 <div class="title">Dragon Ball Daima</div>
               </a>
@@ -219,8 +219,6 @@
             <a href="#">Cookie</a>
             <a href="#">Notice at Collection</a>
             <a href="#">Sitemap</a>
-            <a href="#">Login</a>
-            <a href="#">Sign Up</a>
           </div>
         </div>
       </footer>
