--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!-- <hr> -->
         <div class="card-row">
         <div class="card">
-            <a href="pages/manga1.html" target="_blank">
+            <a href="pages/berserk.html" target="_blank">
             <img src="images/berserk.png" alt="Berserk">
             <div class="title">Berserk</div>
             </a>
