--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </a>
         </div>
         <div class="card">
-            <a href="https://example7.com" target="_blank">
+            <a href="pages/jojo.html" target="_blank">
             <img src="images/jojo.png" alt="JoJo no Kimyou na Bouken Part 7: Steel Ball Run">
             <div class="title">JoJo no Kimyou na Bouken Part 7...</div>
             </a>
