--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </a>
         </div>
         <div class="card">
-            <a href="https://example8.com" target="_blank">
+            <a href="pages/vagabond.html" target="_blank">
             <img src="images/vagabond.png" alt="Vagabond">
             <div class="title">Vagabond</div>
             </a>
