--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </a>
         </div>
         <div class="card">
-            <a href="https://example9.com" target="_blank">
+            <a href="pages/onepiece.html" target="_blank">
             <img src="images/onepiece.png" alt="One Piece">
             <div class="title">One Piece</div>
             </a>
