--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </a>
         </div>
         <div class="card">
-            <a href="/pages/slamdunk.html" target="_blank">
+            <a href="pages/slamdunk.html" target="_blank">
             <img src="images/slamdunk.png" alt="Slam Dunk">
             <div class="title">Slam Dunk</div>
             </a>
