--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- <hr> -->
         <div class="card-row">
             <div class="card">
-              <a href="pages/Dandadan.html" target="_blank">
+              <a href="pages/dandadan.html" target="_blank">
                 <img src="images/dandadan.png" alt="Anime 1">
                 <div class="title">Dandadan</div>
               </a>
@@ -92,7 +92,7 @@
               </a>
             </div>
             <div class="card">
-              <a href="/pages/uzumaki.html" target="_blank">
+              <a href="pages/uzumaki.html" target="_blank">
                 <img src="images/Uzumaki.png" alt="Anime 3">
                 <div class="title">Uzumaki</div>
               </a>
