--- a/pages/monster.html
+++ b/pages/monster.html
@@ -107,39 +107,36 @@ x<!DOCTYPE html>
 
             <section class="related-entries">
                 <h3>Related Entries</h3>
-                <img src="../images/berserkrel1.png"></img>
+                <img src="../images/monsterrel.png"></img>
                 <br>
-                <a style="color: white;">Adaptation (TV)</a><p style="color: white;">Kenpuu Denki Berserk</p>
+                <a style="color: white;">Adaptation (Light Novel)</a><p style="color: white;">Monster Musume no Oishasan</p>
                 <br>
-                <img src="../images/berserkrel2.png"></img>
-                <br>
-                <a style="color: white;">Adaptation (Movie)</a><p style="color: white;">Berserk: Ougon Jidai-hen II - Doldrey Kouryaku</p>
             </section>
             <section class="characters">
                 <h3>Characters & Voice Actors</h3>
                 <table>
                     <tr>
                         <td>
-                            <img src="../images/guts.png" alt="Character Image">
-                            <span>Guts</span>
+                            <img src="../images/neikessaphentite.png" alt="Character Image">
+                            <span>Neikes Saphentite</span>
                             <small>Main</small>
                         </td>
                         <td>
-                            <img src="../images/griffith.png" alt="Voice Actor Image">
-                            <span>Grifftith</span>
+                            <img src="../images/litbeitglenn.png" alt="Voice Actor Image">
+                            <span>Litbeit Glenn</span>
                             <small>Main</small>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <img src="../images/casca.png" alt="Character Image">
-                            <span>Casca</span>
-                            <small>Main</small>
+                            <img src="../images/dragenfeltskadi.png" alt="Character Image">
+                            <span>Dragenfelt Skadi</span>
+                            <small>Supporting</small>
                         </td>
                         <td>
-                            <img src="../images/puck.png" alt="Voice Actor Image">
-                            <span>Puck</span>
-                            <small>support</small>
+                            <img src="../images/heinelulala.png" alt="Voice Actor Image">
+                            <span>Heine Lulala</span>
+                            <small>Supporting</small>
                         </td>
                     </tr>
                 </table>
