--- a/cc.html
+++ b/cc.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>News - MyAnimeList-Clone</title>
+    <link rel="stylesheet" href="cc.css">
 </head>
 <body>
     <header>
@@ -68,66 +69,63 @@
             </div>
         </nav>
     </header>
-    <main></main>
+
+    <main class="news-container">
+        <section class="news-feed">
+            <article class="news-item">
+                <img src="anime1.jpg" alt="Ganbare Nakamura-kun! Promo">
+                <div class="news-content">
+                    <h2>‘Ganbare! Nakamura-kun!!’ Unveils Main Cast, First Promo</h2>
+                    <p>The official website of the Ganbare! Nakamura-kun!! television anime revealed the main cast...</p>
+                    <p class="meta">Yesterday, 11:05 AM by <span>DatRandomDude</span> | 8 Comments</p>
+                    <div class="tags">
+                        <span>Preview</span>
+                        <span>More Info</span>
+                    </div>
+                </div>
+            </article>
+            <!-- Repeat similar article structures for more news -->
+        </section>
+
+        <aside class="sidebar">
+            <div class="search-box">
+                <input type="text" placeholder="Search News...">
+            </div>
+            
+            <section class="category-filter">
+                <h3>Categories</h3>
+                <ul>
+                    <li><a href="#">All</a></li>
+                    <li><a href="#">Anime</a></li>
+                    <li><a href="#">Manga</a></li>
+                    <li><a href="#">People</a></li>
+                    <li><a href="#">Industry</a></li>
+                </ul>
+            </section>
+
+            <section class="recent-news">
+                <h3>New Anime</h3>
+                <ul>
+                    <li><a href="#">Yuru Camp△ Season 4 Announced</a></li>
+                    <li><a href="#">Web Manga 'Hotel Inhumans' Gets TV Anime</a></li>
+                    <!-- Repeat for more news items -->
+                </ul>
+            </section>
+
+            <section class="trending-tags">
+                <h3>Trending Tags</h3>
+                <ul>
+                    <li><a href="#">Spring 2025</a></li>
+                    <li><a href="#">New Anime</a></li>
+                    <li><a href="#">Winter 2025</a></li>
+                    <!-- Add more tags as needed -->
+                </ul>
+            </section>
+        </aside>
+    </main>
+
     <footer>
-        <div class="footer-content">
-          <div class="footer-sections">
-            <div class="footer-section">
-              <h3>Top Anime</h3>
-              <ul>
-                <li>1. Sousou no Frieren</li>
-                <li>2. One Piece Fan Letter</li>
-                <li>3. Fullmetal Alchemist: Brotherhood</li>
-                <li>4. Steins;Gate</li>
-                <li>5. Shingeki no Kyojin Season 3 Part 2</li>
-              </ul>
-            </div>
-            <div class="footer-section">
-              <h3>Top Airing Anime</h3>
-              <ul>
-                <li>1. Bleach: Sennen Kessen-hen</li>
-                <li>2. Re:Zero kara Hajimeru Isekai Seikatsu</li>
-                <li>3. One Piece</li>
-                <li>4. Natsume Yuujinchou Shichi</li>
-                <li>5. Dandadan</li>
-              </ul>
-            </div>
-            <div class="footer-section">
-              <h3>Most Popular Characters</h3>
-              <ul>
-                <li>1. Lamperouge, Lelouch</li>
-                <li>2. Levi</li>
-                <li>3. Monkey D., Luffy</li>
-                <li>4. Lawliet, L</li>
-                <li>5. Roronoa, Zoro</li>
-              </ul>
-            </div>
-          </div>
-          <div class="footer-social">
-            <p>Follow Us</p>
-            <div class="social-icons">
-              <a href="#">Facebook</a>
-              <a href="#">Twitter</a>
-              <a href="#">Instagram</a>
-              <a href="#">Discord</a>
-            </div>
-          </div>
-          <div class="footer-links">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Press Room</a>
-            <a href="#">Support</a>
-            <a href="#">Advertising</a>
-            <a href="#">FAQ</a>
-            <a href="#">Terms</a>
-            <a href="#">Privacy</a>
-            <a href="#">Cookie</a>
-            <a href="#">Notice at Collection</a>
-            <a href="#">Sitemap</a>
-            <a href="#">Login</a>
-            <a href="#">Sign Up</a>
-          </div>
-        </div>
-      </footer>
+        <p>&copy; 2024 MyAnimeList-Clone</p>
+    </footer>
 </body>
 </html>
