--- a/cc.html
+++ b/cc.html
@@ -3,129 +3,176 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News - MyAnimeList-Clone</title>
+    <title>Anime & Manga News</title>
     <link rel="stylesheet" href="cc.css">
 </head>
 <body>
+
+    <!-- Header (use your existing header file) -->
     <header>
-        <div class="website_name">
-            <a href="index.html"> <img src="images/logo.png" width="150"></a>
-        </div>
-        <div class="homehead">
-            <a href="anime1.html" target="_blank" class="banner-link">
-                <img src="images/homehead1.png" alt="banner" width="800">
-            </a>
-        </div>
-        <nav class="navbar">
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li class="dropdown">
-                    <a href="#">Anime</a>
-                    <div class="dropdown-content">
-                        <a href="pages/top-anime.html">Top Anime</a>
-                        <a href="#">Seasonal Anime</a>
-                        <a href="#">All Time Hits</a>
-                        <a href="#">Recommendations</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#">Manga</a>
-                    <div class="dropdown-content">
-                        <a href="pages/top-manga.html">Top Manga</a>
-                        <a href="pages/seasonal_manga.html">Seasonal Manga</a>
-                        <a href="#">All Time Hits</a>
-                        <a href="#">Recommendations</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#">Community</a>
-                    <div class="dropdown-content">
-                        <a href="#">Forums</a>
-                        <a href="#">Clubs</a>
-                        <a href="#">Events</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="#">Industry</a>
-                    <div class="dropdown-content">
-                        <a href="pages/news.html">News</a>
-                        <a href="#">Featured Articles</a>
-                        <a href="#">Characters</a>
-                        <a href="#">Companies</a>
-                    </div>
-                </li>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">Read</a></li>
-                <li><a href="#">Help</a></li>
-            </ul>
-            <div class="search-container">
-                <select>
-                    <option>All</option>
-                    <option>Anime</option>
-                    <option>Manga</option>
-                </select>
-                <input type="text" placeholder="Search Anime, Manga, and more...">
-                <button type="submit">🔍</button>
+        <header>
+            <div class="website_name">
+                <a href="index.html"> <img src="images/logo.png" width="150"></a>
             </div>
-        </nav>
+            <div class="homehead">
+                <a href="anime1.html" target="_blank" class="banner-link">
+                    <img src="images/homehead1.png" alt="banner" width="800">
+                </a>
+            </div>
+            <nav class="navbar">
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li class="dropdown">
+                        <a href="#">Anime</a>
+                        <div class="dropdown-content">
+                            <a href="pages/top-anime.html">Top Anime</a>
+                            <a href="#">Seasonal Anime</a>
+                            <a href="#">All Time Hits</a>
+                            <a href="#">Recommendations</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">Manga</a>
+                        <div class="dropdown-content">
+                            <a href="pages/top-manga.html">Top Manga</a>
+                            <a href="pages/seasonal_manga.html">Seasonal Manga</a>
+                            <a href="#">All Time Hits</a>
+                            <a href="#">Recommendations</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">Community</a>
+                        <div class="dropdown-content">
+                            <a href="#">Forums</a>
+                            <a href="#">Clubs</a>
+                            <a href="#">Events</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">Industry</a>
+                        <div class="dropdown-content">
+                            <a href="pages/news.html">News</a>
+                            <a href="#">Featured Articles</a>
+                            <a href="#">Characters</a>
+                            <a href="#">Companies</a>
+                        </div>
+                    </li>
+                    <li><a href="#">Watch</a></li>
+                    <li><a href="#">Read</a></li>
+                    <li><a href="#">Help</a></li>
+                </ul>
+                <div class="search-container">
+                    <select>
+                        <option>All</option>
+                        <option>Anime</option>
+                        <option>Manga</option>
+                    </select>
+                    <input type="text" placeholder="Search Anime, Manga, and more...">
+                    <button type="submit">🔍</button>
+                </div>
+            </nav>
+        </header>
     </header>
 
+    <!-- Main Content -->
     <main class="news-container">
+        <aside class="sidebar">
+            <h3>Search News</h3>
+            <input type="text" placeholder="Search..." class="search-bar">
+            <div class="categories">
+                <h4>New Anime</h4>
+                <ul>
+                    <li><a href="#">Yuru Camp Season 4</a></li>
+                    <li><a href="#">Web Manga 'Hotel Inhumans'</a></li>
+                    <li><a href="#">Video Game 'Arne no Jikenbo'</a></li>
+                </ul>
+                <h4>Winter 2025</h4>
+                <ul>
+                    <li><a href="#">Sousei no Aquarion: Myth of Emotions</a></li>
+                    <li><a href="#">NEET Kunoichi</a></li>
+                    <li><a href="#">Sora to Midori</a></li>
+                </ul>
+                <!-- Add more categories as needed -->
+            </div>
+        </aside>
+
         <section class="news-feed">
             <article class="news-item">
-                <img src="anime1.jpg" alt="Ganbare Nakamura-kun! Promo">
+                <img src="path/to/image1.jpg" alt="Anime Image 1" class="news-thumbnail">
                 <div class="news-content">
-                    <h2>‘Ganbare! Nakamura-kun!!’ Unveils Main Cast, First Promo</h2>
-                    <p>The official website of the Ganbare! Nakamura-kun!! television anime revealed the main cast...</p>
-                    <p class="meta">Yesterday, 11:05 AM by <span>DatRandomDude</span> | 8 Comments</p>
-                    <div class="tags">
-                        <span>Preview</span>
-                        <span>More Info</span>
-                    </div>
+                    <h2>Ganbare! Nakamura-kun!! Unveils Main Cast, First Promo</h2>
+                    <p>The official website for Ganbare! Nakamura-kun!! revealed the main cast and first promotional video...</p>
+                    <span class="date">Yesterday, 11:05 AM</span>
+                    <a href="#" class="more-info">More Info</a>
                 </div>
             </article>
-            <!-- Repeat similar article structures for more news -->
+            <!-- Repeat similar structure for other news items -->
         </section>
-
-        <aside class="sidebar">
-            <div class="search-box">
-                <input type="text" placeholder="Search News...">
-            </div>
-            
-            <section class="category-filter">
-                <h3>Categories</h3>
-                <ul>
-                    <li><a href="#">All</a></li>
-                    <li><a href="#">Anime</a></li>
-                    <li><a href="#">Manga</a></li>
-                    <li><a href="#">People</a></li>
-                    <li><a href="#">Industry</a></li>
-                </ul>
-            </section>
-
-            <section class="recent-news">
-                <h3>New Anime</h3>
-                <ul>
-                    <li><a href="#">Yuru Camp△ Season 4 Announced</a></li>
-                    <li><a href="#">Web Manga 'Hotel Inhumans' Gets TV Anime</a></li>
-                    <!-- Repeat for more news items -->
-                </ul>
-            </section>
-
-            <section class="trending-tags">
-                <h3>Trending Tags</h3>
-                <ul>
-                    <li><a href="#">Spring 2025</a></li>
-                    <li><a href="#">New Anime</a></li>
-                    <li><a href="#">Winter 2025</a></li>
-                    <!-- Add more tags as needed -->
-                </ul>
-            </section>
-        </aside>
     </main>
 
+    <!-- Footer (use your existing footer file) -->
     <footer>
-        <p>&copy; 2024 MyAnimeList-Clone</p>
+        <footer>
+            <div class="footer-content">
+              <div class="footer-sections">
+                <div class="footer-section">
+                  <h3>Top Anime</h3>
+                  <ul>
+                    <li>1. Sousou no Frieren</li>
+                    <li>2. One Piece Fan Letter</li>
+                    <li>3. Fullmetal Alchemist: Brotherhood</li>
+                    <li>4. Steins;Gate</li>
+                    <li>5. Shingeki no Kyojin Season 3 Part 2</li>
+                  </ul>
+                </div>
+                <div class="footer-section">
+                  <h3>Top Airing Anime</h3>
+                  <ul>
+                    <li>1. Bleach: Sennen Kessen-hen</li>
+                    <li>2. Re:Zero kara Hajimeru Isekai Seikatsu</li>
+                    <li>3. One Piece</li>
+                    <li>4. Natsume Yuujinchou Shichi</li>
+                    <li>5. Dandadan</li>
+                  </ul>
+                </div>
+                <div class="footer-section">
+                  <h3>Most Popular Characters</h3>
+                  <ul>
+                    <li>1. Lamperouge, Lelouch</li>
+                    <li>2. Levi</li>
+                    <li>3. Monkey D., Luffy</li>
+                    <li>4. Lawliet, L</li>
+                    <li>5. Roronoa, Zoro</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="footer-social">
+                <p>Follow Us</p>
+                <div class="social-icons">
+                  <a href="#">Facebook</a>
+                  <a href="#">Twitter</a>
+                  <a href="#">Instagram</a>
+                  <a href="#">Discord</a>
+                </div>
+              </div>
+              <div class="footer-links">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Press Room</a>
+                <a href="#">Support</a>
+                <a href="#">Advertising</a>
+                <a href="#">FAQ</a>
+                <a href="#">Terms</a>
+                <a href="#">Privacy</a>
+                <a href="#">Cookie</a>
+                <a href="#">Notice at Collection</a>
+                <a href="#">Sitemap</a>
+                <a href="#">Login</a>
+                <a href="#">Sign Up</a>
+              </div>
+            </div>
+          </footer>
     </footer>
+
 </body>
 </html>
