--- a/pages/top-manga.html
+++ b/pages/top-manga.html
@@ -49,7 +49,7 @@
                 <li class="dropdown">
                     <a href="#">Industry</a>
                     <div class="dropdown-content">
-                        <a href="#">News</a>
+                        <a href="../pages/news.html">News</a>
                         <a href="#">Featured Articles</a>
                         <a href="#">Characters</a>
                         <a href="#">Companies</a>
