--- a/pages/news.html
+++ b/pages/news.html
@@ -21,11 +21,11 @@
             </div>
             <nav class="navbar">
                 <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li class="dropdown">
                         <a href="#">Anime</a>
                         <div class="dropdown-content">
-                            <a href="pages/top-anime.html">Top Anime</a>
+                            <a href="../pages/top-anime.html">Top Anime</a>
                             <a href="#">Seasonal Anime</a>
                             <a href="#">All Time Hits</a>
                             <a href="#">Recommendations</a>
@@ -34,8 +34,8 @@
                     <li class="dropdown">
                         <a href="#">Manga</a>
                         <div class="dropdown-content">
-                            <a href="pages/top-manga.html">Top Manga</a>
-                            <a href="pages/seasonal_manga.html">Seasonal Manga</a>
+                            <a href="../pages/top-manga.html">Top Manga</a>
+                            <a href="../pages/seasonal_manga.html">Seasonal Manga</a>
                             <a href="#">All Time Hits</a>
                             <a href="#">Recommendations</a>
                         </div>
@@ -81,7 +81,7 @@
             <article class="news-item2">
                 <img src="../images/news1.png" alt="Anime Image 1" class="news-thumbnail">
                 <div class="news-content">
-                    <h2><a href="">Ganbare! Nakamura-kun!! Unveils Main Cast, First Promo</a></h2>
+                    <h2><a href="../pages/article1.html">Ganbare! Nakamura-kun!! Unveils Main Cast, First Promo</a></h2>
                     <p>The official website of the Ganbare! Nakamura-kun!! (Go For It, Nakamura!) television anime revealed the main cast and the first promotional video on Saturday. The anime is scheduled to premiere in 2025. Chiaki Kobayashi (SK∞) and Yuuki Sakakihara (Dead Mount Death Play) are star...</p>
                     <span class="date">Yesterday, 11:05 AM</span>
                 </div>
@@ -97,7 +97,7 @@
             <article class="news-item">
                 <img src="../images/news2.png" alt="Anime Image 1" class="news-thumbnail">
                 <div class="news-content">
-                    <h2><a href="">'Boukyaku Battery' Receives Second Season</a></h2>
+                    <h2><a href="../pages/article3.html">'Boukyaku Battery' Receives Second Season</a></h2>
                     <p>The official website for the television anime adaptation of Eco Mikawa's Boukyaku Battery (Oblivion Battery) manga announced a second season on Sunday. The first season, produced by MAPPA, aired in 12 episodes in Spring 2024. Crunchyroll simulcast the anime with English subtitles...</p>
                     <span class="date">Yesterday, 10:05 PM</span>
                 </div>
@@ -105,7 +105,7 @@
             <article class="news-item">
                 <img src="../images/news3.png" alt="Anime Image 1" class="news-thumbnail">
                 <div class="news-content">
-                    <h2><a href="">'Yuru Camp△' Season 4 Announced</a></h2>
+                    <h2><a href="article4.html">'Yuru Camp△' Season 4 Announced</a></h2>
                     <p>The Yuru Camp△ Season 3 Yuru Camper no Tsudoi special event announced a fourth anime season on Saturday, revealing a commemorative illustration by the original creator Afro (pictured). Yuru Camp△ adapts Afro's slice of life manga, which began in Manga Time Kirara Forward in May 2...</p>
                     <span class="date">Yesterday, 8:25 AM</span>
                 </div>
@@ -113,7 +113,7 @@
             <article class="news-item">
                 <img src="../images/news4.png" alt="Anime Image 1" class="news-thumbnail">
                 <div class="news-content">
-                    <h2><a href="">'Isshun de Chiryou shiteita noni Yakutatazu to Tsuihou sareta Tensai Chiyushi, Yami Healer toshite Tanoshiku Ikiru' Reveals Main Cast, Production Staff, Teaser Promo for Spring 2025</a></h2>
+                    <h2><a href="../pages/article5.html">'Isshun de Chiryou shiteita noni Yakutatazu to Tsuihou sareta Tensai Chiyushi, Yami Healer toshite Tanoshiku Ikiru' Reveals Main Cast, Production Staff, Teaser Promo for Spring 2025</a></h2>
                     <p>The official website for the television anime adaptation of Sakaku Hishikawa's Isshun de Chiryou shiteita noni Yakutatazu to Tsuihou sareta Tensai Chiyushi, Yami Healer toshite Tanoshiku Ikiru (The Brilliant Healer's New Life in the Shadows) light novel revealed the main cast, pr...</p>
                     <span class="date">Nov 8, 11:59 AM</span>
                 </div>
