--- a/pages/top-manga.html
+++ b/pages/top-manga.html
@@ -260,19 +260,7 @@
             </div>
           </div>
           <div class="footer-links">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Press Room</a>
-            <a href="#">Support</a>
-            <a href="#">Advertising</a>
-            <a href="#">FAQ</a>
-            <a href="#">Terms</a>
-            <a href="#">Privacy</a>
-            <a href="#">Cookie</a>
-            <a href="#">Notice at Collection</a>
-            <a href="#">Sitemap</a>
-            <a href="#">Login</a>
-            <a href="#">Sign Up</a>
+            <a href="../index.html">Home</a>
           </div>
         </div>
       </footer>
